--- a/AOX_standalone/AOX_approx_standalone/PackagingLog.html
+++ b/AOX_standalone/AOX_approx_standalone/PackagingLog.html
@@ -1,16 +1,16 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o AOX_approx -W 'main:AOX_approx,version=1.0' -T link:exe -d C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_approx_standalone\for_testing -R '-logfile,AOXapproxLog' -v C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_approx.m -r 'C:\Program Files\MATLAB\R2019b\toolbox\compiler\Resources\default_icon.ico' </font>
+<font color=blue>mcc -o AOX_Approx -W 'main:AOX_Approx,version=1.0' -T link:exe -d C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_Approx_standalone\for_testing -R '-logfile,AOXApproxLog' -v C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_Approx.m -r 'C:\Program Files\MATLAB\R2019b\toolbox\compiler\Resources\default_icon.ico' </font>
 Compiler version: 7.1 (R2019b)
 
 Dependency analysis by REQUIREMENTS.
 
-Parsing file "C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_approx.m"
+Parsing file "C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_Approx.m"
 	(referenced from command line).
-Generating file "C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_approx_standalone\for_testing\readme.txt".
+Generating file "C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_Approx_standalone\for_testing\readme.txt".
 <font color=blue>Packaging...</font>
 Creating the bundle...
 Creating the install agent URL file...
-Web based installer created at C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_approx_standalone\for_redistribution\MyAppInstaller_web.exe.
+Web based installer created at C:\Users\Robbie\Documents\GitHub\AOX_BalCal\AOX_standalone\AOX_Approx_standalone\for_redistribution\MyAppInstaller_web.exe.
 Packaging complete.
-Elapsed packaging time was: 32 seconds.
+Elapsed packaging time was: 47 seconds.
 </pre></html>
